--- a/Artzy - Web/css/style-home.css
+++ b/Artzy - Web/css/style-home.css
@@ -8,3 +8,27 @@ body{
 .on{
     display: block;
 }
+
+.scrollbar2 {
+    right: 20px; 
+    position: relative;
+  
+  }
+  
+  .scrollbar2::-webkit-scrollbar {
+    width: 19px;
+  }
+  
+  .scrollbar2::-webkit-scrollbar-thumb {
+    background-color: #6b4949; 
+    border: 0.28em solid #f5e7e1; 
+    border-radius: 2rem; 
+  }
+  
+  .scrollbar2::-webkit-scrollbar-thumb:hover {
+    background-color: rgb(136, 106, 106); 
+  }
+  
+  .scrollbar2::-webkit-scrollbar-track{
+    border-radius: 3rem;
+  }
