--- a/artzylari/Artzy - Web/css/style-sobre.css
+++ b/artzylari/Artzy - Web/css/style-sobre.css
@@ -6,6 +6,14 @@
     font-family: HeyComic ;
     src: url(../src//font/hey_comic//Hey\ Comic.ttf);
 }
+@font-face {
+    font-family: Organic Relief;
+    src: url(../src/font/organic_relief/Organic\ Relief.ttf);
+}
+@font-face {
+    font-family: Justmore-PersonalUse;
+    src: url(../src/font/justmore/Justmore\ -\ Personal\ Use.ttf);
+}
 
 body {
     background-color: #FBCF85;
@@ -778,17 +786,313 @@ body {
 
 /* 💦💦💦💦 TRABALHE CONOSCO 💦💦💦💦 */
 
+.tr
+{
+    position: relative;
+    right: 6rem;
+    top: -206rem;
+}
 .lulu
 {
     position: absolute;
-    left: 1.9rem;
+    left: 12.9rem;
     right: 0rem;
-    top: 101.8rem;
+    top: 439.8rem;
     bottom: 0rem;
 }
 
 #lulu img
 {
-    width: 735px;
-    height: 1002px;
+    width: 585px;
+    height: 767px;
 }
+.qtc
+{
+    position: absolute;
+    text-align: center;
+    font-family: Organic Relief;
+    font-size: 43pt;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: 1.55pt;
+    color: #57012F;
+    left: 42.1rem;   
+    right: -5rem;
+    top: 442rem;
+    bottom: 0rem;
+}
+.qtc2
+{
+    position: absolute;
+    text-align: center;
+    font-family: Organic Relief;
+    font-size: 45pt;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: 1.55pt;
+    color: #57012F;
+    left: 22.5rem;
+    right: -5rem;
+    top: 449.5rem;
+    bottom: 0rem;
+}
+.pt
+{
+    position: absolute;
+    font-family: KGRedHands;
+    text-align: left;
+    font-size: 22pt;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: 1.55pt;
+    color: #57012F;
+    left: 45rem;
+    right: 0rem;
+    top: 461rem;
+    bottom: 0rem;
+}
+.pt2
+{
+    position: absolute;
+    font-family: KGRedHands;
+    text-align: left;
+    font-size: 22pt;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: 1.55pt;
+    color: #57012F;
+    left: 45rem;
+    right: 0rem;
+    top: 469rem;
+    bottom: 0rem;
+}
+
+/* 💦💦💦💦 ENTRE EM CONTATO 💦💦💦💦 */
+.r
+{
+    position: relative;
+    left: -40rem;
+    right: 0rem;
+    top: -181rem;
+    bottom: 0rem;
+}
+.retan
+{
+    position: absolute;
+    width: 1583px;
+    height: 681px;
+    flex-grow: 0;
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+    border-bottom-right-radius: 0px;
+    border-bottom-left-radius: 0px;
+    background-color: #543838;
+    box-shadow: 0 -30px 0 0 #fff;
+    left: 40rem;
+    right: 0rem;
+    top: 477rem;
+    bottom: 0rem;
+    z-index: 1;
+}
+/* 💦💦💦💦 DENTRO DO RETAN 💦💦💦💦 */
+
+.ec
+{
+    position: absolute;
+    width: 942px;
+    height: 71px;
+    flex-grow: 3;
+    margin: 0 272.7px 90px 272px;
+    -webkit-text-stroke: 1.2px #2e1e1e;    
+    font-family: KGRedHands;
+    font-size: 57.3px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    text-align: center;
+    color: #e8a542;
+    left: 3rem;
+    right: 0rem;
+    top: 2rem;
+    z-index: 2;
+}
+.ec:hover + .linha {
+    visibility: visible; /* Torna a linha visível quando o mouse passa sobre o texto */
+    transform: scaleX(1.2); /* Estica a linha */
+}
+.linha 
+{
+    position: absolute;
+    width: 403px;
+    height: 4px;
+    align-items: center;
+    flex-grow: 0;
+    margin: 90px 139px 89px 138.3px;
+    transform: rotate(-0.4deg);
+    background-color: #e8a542;
+    border-radius: 16px;
+    left: 28rem;
+    right: 0rem;
+    top: 6.2rem;
+    visibility: hidden;
+    transition: transform ease-in 0.4s;}
+.linha:hover 
+{
+    width: 550px; 
+    transform: scaleX(1.2);
+    transition: transform ease-in 0.4s;
+}
+
+
+.in1 {
+    position: relative;
+    width: 373px;
+    height: 48px;
+    font-family: Justmore-PersonalUse;
+    font-size: 16.3px;
+    border-radius: 16px;
+    border: solid 3px #000;
+    box-shadow: -4px 5px 0 0 #e8a542;    
+    padding-top: 5px;
+    padding-right: 5px;
+    padding-bottom: 5px;
+    padding-left: 12px;
+    margin-top: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    margin-left: -7px;
+    top: 14rem;
+    left: 9.4rem;
+    transition: transform 0.3s ease-in-out;
+}
+.in1:hover {
+    transform: translateY(-5px); /* Ergue o input suavemente quando o mouse passa sobre ele */
+}
+.in2 
+{
+    position: relative;
+    width: 373px;
+    height: 48px;
+    font-family: Justmore-PersonalUse;
+    font-size: 16.3px;
+    border-radius: 16px;
+    border: solid 3px #000;
+    box-shadow: -4px 5px 0 0 #e8a542;    
+    padding-top: 5px;
+    padding-right: 5px;
+    padding-bottom: 5px;
+    padding-left: 12px;
+    margin-top: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    margin-left: -7px;
+    top: 9.7rem;
+    left: 40.4rem;
+    transition: transform 0.3s ease-in-out;
+
+}
+.in2:hover {
+    transform: translateY(-5px); /* Ergue o input suavemente quando o mouse passa sobre ele */
+}
+
+.in3 
+{
+    position: relative;
+    width: 373px;
+    height: 48px;
+    font-family: Justmore-PersonalUse;
+    font-size: 16.3px;
+    border-radius: 16px;
+    border: solid 3px #000;
+    box-shadow: -4px 5px 0 0 #e8a542;    
+    padding-top: 5px;
+    padding-right: 5px;
+    padding-bottom: 5px;
+    padding-left: 12px;
+    margin-top: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    margin-left: -7px;
+    top: 5.5rem;
+    left: 67.7rem;
+    transition: transform 0.3s ease-in-out;
+
+}
+.in3:hover {
+    transform: translateY(-5px); /* Ergue o input suavemente quando o mouse passa sobre ele */
+}
+.confir
+{
+    position: relative;
+    width: 148px;
+    height: 48px;
+    font-family: Justmore-PersonalUse;
+    font-size: 16.3px;
+    color:#585757;
+    border-radius: 16px;
+    border: solid 3px #000000;
+    box-shadow: -4px 5px 0 0 #fdfdfd;    
+    padding-top: 5px;
+    padding-right: 5px;
+    padding-bottom: 5px;
+    padding-left: 12px;
+    margin-top: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    margin-left: -7px;
+    top: 6.3rem;
+    left: 45.7rem;
+    background-color: #e8a542;
+    transition: transform ease-in 0.4s;
+}
+.confir:hover
+{
+    width: 150px; 
+    transform: scaleX(1.2);
+    transition: transform ease-in 0.4s;
+}    
+
+.retan2
+{
+    position: absolute;
+    width: 1583.4px;
+    height: 308px;
+    flex-grow: 0;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+    border-bottom-left-radius: 0px;
+    background-color: #402c2c;
+    left: 40rem;
+    right: 0rem;
+    top: 500.3rem;
+    bottom: 0rem;
+    z-index: 3;
+} 
+.fot
+{
+    position: relative;
+    width: 1583.4px;
+    height: 308px;
+    left: 0rem;
+    right: 0rem;
+    top: 316.8rem;
+    bottom: 0rem;
+    z-index: 4;
+}
+.foots
+{
+background-color: #402c2c;
+
+}
+
