--- a/Artzy - Web/css/style-profile.css
+++ b/Artzy - Web/css/style-profile.css
@@ -394,8 +394,7 @@ body{
     top: 37rem;
   }
 
-  .it{
-    background-color: #3d2828;
+  .it img{
     width: 352px;
     height: 205px;
     margin: 0px 5px 10px 5px;
