--- a/artzy-nezo/Artzy - Web/css/pdp.css
+++ b/artzy-nezo/Artzy - Web/css/pdp.css
@@ -1,5 +1,6 @@
 @import url("fonts.css");
 @import url('https://fonts.cdnfonts.com/css/squashy-flow');
+@import url('https://fonts.cdnfonts.com/css/discreet');
 
 body {
 
@@ -7,11 +8,10 @@ body {
     
 }
 
-  
 .Cubao {
 
     width: 1041px;
-    height: 34479px;
+    height: 24550px;
     margin: 51px 296px 213px 297px;
     padding: 155px 97px 9833px 80px;
     border-radius: 41px;
@@ -21,6 +21,7 @@ body {
     position: relative;
     right: 7rem;
     top: 0rem;
+    text-align: justify;
   }
 
   .termos {
@@ -46,7 +47,7 @@ body {
     width: 1055px;
     height: 125.7px;
     margin: 51.6px 0 40px 9px;
-    font-family: 'KGRedHands', sans-serif;
+    font-family:'discreet';
     font-size: 32px;
     font-weight: normal;
     font-stretch: normal;
@@ -65,7 +66,7 @@ body {
   height: 925.5px;
   margin: 40px 0 315.1px 9px;
   padding: 537.9px 0 55.1px;
-  font-family: 'KGRedHands', sans-serif;
+  font-family: 'discreet';
   font-size: 24px;
   font-weight: normal;
   font-stretch: normal;
@@ -85,7 +86,7 @@ body {
     width: 1041px;
     height: 293.9px;
     margin: 948.1px 14px 38.6px 9px;
-    font-family: 'KGRedHands', sans-serif;
+    font-family: 'discreet';
     font-size: 24px;
     font-weight: normal;
     font-stretch: normal;
@@ -108,7 +109,7 @@ body {
     width: 604px;
     height: 207.6px;
     margin: 38.6px 451px 0.3px 9px;
-    font-family: 'KGRedHands', sans-serif;
+    font-family: 'discreet';
     font-size: 24px;
     font-weight: normal;
     font-stretch: normal;
@@ -127,7 +128,7 @@ body {
     width: 1034px;
     height: 606.7px;
     margin: 0.3px 21px 95.6px 9px;
-    font-family: 'KGRedHands', sans-serif;
+    font-family: 'discreet';
     font-size: 24px;
     font-weight: normal;
     font-stretch: normal;
@@ -137,7 +138,7 @@ body {
     text-align: left;
     color: #000;
   }
-  .txt5 {
+  .txt5 .text-style-1{
     font-size: 32px;
     letter-spacing: 1.28px;
   }
@@ -146,7 +147,7 @@ body {
     width: 1034px;
     height: 175px;
     margin: 95.6px 21px 96px 9px;
-    font-family: ComicSansMS;
+    font-family: 'discreet';
     font-size: 24px;
     font-weight: normal;
     font-stretch: normal;
@@ -157,6 +158,321 @@ body {
     color: #000;
   }
   .txt6 .text-style-1 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+
+  .txt7 {
+    width: 1019px;
+    height: 472px;
+    margin: 96px 45px 131px 0;
+    font-family: 'discreet';
+    font-size: 24px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: 0.96px;
+    text-align: left;
+    color: #000;
+  }
+  .txt7 .text-style-1 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+
+  .txt8 {
+    width: 1007px;
+    height: 198px;
+    margin: 131px 57px 81px 0;
+    font-family: 'discreet';
+    font-size: 24px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: 0.96px;
+    text-align: left;
+    color: #000;
+  }
+  .txt8 .text-style-1 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+  .txt8 .text-style-2 {
+    font-size: 40px;
+    letter-spacing: 1.6px;
+  }
+
+  .txtabsurdo {
+    width: 1026px;
+    height: 20470px;
+    margin: 81px 26px 0 12px;
+    font-family: 'discreet';
+    font-size: 24px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: 0.96px;
+    text-align: left;
+    color: #000;
+  }
+  .txtabsurdo .text-style-1 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+
+  .txtabsurdo .text-style-2 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+
+  .txtabsurdo .text-style-3 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+
+  .txtabsurdo .text-style-4 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+
+  .txtabsurdo .text-style-5 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+
+  .txtabsurdo .text-style-6 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+
+  .txtabsurdo .text-style-7 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+
+  .txtabsurdo .text-style-8 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+
+  .txtabsurdo .text-style-9 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+
+  .txtabsurdo .text-style-10 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+
+  .txtabsurdo .text-style-11 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+
+  .txtabsurdo .text-style-12 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+
+  .txtabsurdo .text-style-13 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+
+  .txtabsurdo .text-style-14 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+
+  .txtabsurdo .text-style-15 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+
+  .txtabsurdo .text-style-16 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+
+  .txtabsurdo .text-style-17 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+
+  .txtabsurdo .text-style-18 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+
+  .txtabsurdo .text-style-19 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+
+  .txtabsurdo .text-style-20 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+
+  .txtabsurdo .text-style-21 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+
+  .txtabsurdo .text-style-22 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+
+  .txtabsurdo .text-style-23 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+
+  .txtabsurdo .text-style-24 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+
+  .txtabsurdo .text-style-25 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+
+  .txtabsurdo .text-style-26 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+
+  .txtabsurdo .text-style-27 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+
+  .txtabsurdo .text-style-28 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+
+  .txtabsurdo .text-style-29 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+
+  .txtabsurdo .text-style-30 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+  .txtabsurdo2 {
+    width: 1018px;
+    height: 9980px;
+    margin: 24763px 427px 0 389px;
+    font-family: 'discreet';
+    font-size: 24px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: 0.96px;
+    text-align: left;
+    color: #000;
+  }
+  .txtabsurdo2 .text-style-1 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+    text-align: left;
+    display: block;
+  }
+    .txtabsurdo2 .text-style-2 {
+      font-size: 32px;
+      letter-spacing: 1.28px;
+
+  }
+  .txtabsurdo2 .text-style-3 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+  
+  .txtabsurdo2 .text-style-4 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+  
+  .txtabsurdo2 .text-style-5 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+  
+  .txtabsurdo2 .text-style-6 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+  
+  .txtabsurdo2 .text-style-7 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+  
+  .txtabsurdo2 .text-style-8 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+  
+  .txtabsurdo2 .text-style-9 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+  
+  .txtabsurdo2 .text-style-10 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+  
+  .txtabsurdo2 .text-style-11 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+  
+  .txtabsurdo2 .text-style-12 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+  
+  .txtabsurdo2 .text-style-13 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+  
+  .txtabsurdo2 .text-style-14 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+  
+  .txtabsurdo2 .text-style-15 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+  
+  .txtabsurdo2 .text-style-16 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+  
+  .txtabsurdo2 .text-style-17 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+  
+  .txtabsurdo2 .text-style-18 {
+    font-size: 32px;
+    letter-spacing: 1.28px;
+  }
+
+  .txtabsurdo2 .text-style-19 {
     font-size: 32px;
     letter-spacing: 1.28px;
   }
