--- a/artzy-nezo/Artzy - Web/confs/rs.css
+++ b/artzy-nezo/Artzy - Web/confs/rs.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.cdnfonts.com/css/vcr-osd-mono');
+@import url('https://fonts.cdnfonts.com/css/upheaval');
+@import url('../css/fonts.css');
 
 .rs-fundo{
     width: 655px;
