--- a/artzy-heitor/Artzy - Web/header&footer/style.css
+++ b/artzy-heitor/Artzy - Web/header&footer/style.css
@@ -573,3 +573,22 @@
 
 
 }
+
+.autocomplete-results {
+    position: absolute;
+    background-color: rgb(128, 0, 0);
+    border: 1px solid #493f3f;
+    width: 100%;
+    max-height: 200px;
+    overflow-y: auto;
+    z-index: 1000;
+}
+
+.autocomplete-item {
+    padding: 10px;
+    cursor: pointer;
+}
+
+.autocomplete-item:hover {
+    background-color: #f0f0f0;
+}
