--- a/artzy-heitor/Artzy - Web/header&footer/style2.css
+++ b/artzy-heitor/Artzy - Web/header&footer/style2.css
@@ -519,3 +519,22 @@
 
 
 }
+
+.autocomplete-results {
+  position: absolute;
+  background-color: white;
+  border: 1px solid #ccc;
+  width: 100%;
+  max-height: 200px;
+  overflow-y: auto;
+  z-index: 1000;
+}
+
+.autocomplete-item {
+  padding: 10px;
+  cursor: pointer;
+}
+
+.autocomplete-item:hover {
+  background-color: #f0f0f0;
+}
