--- a/Artzy - Web/confs/user.css
+++ b/Artzy - Web/confs/user.css
@@ -238,7 +238,7 @@
     line-height: normal;
     letter-spacing: 0.6px;
     text-align: left;
-    color: #000;
+    color: #c0abab;
     
 }
 .ddp-menu{
@@ -255,7 +255,7 @@
     position: absolute;
     margin-left: -1.5rem;
     cursor: pointer;
-    transition: background-color 0.3s ease, box-shadow 0.7s ease, transform 0.6s ease;
+    transition: background-color 0.3s ease, box-shadow 0.7s ease, transform 0.6s ease, color 0.3s ease;
     
 }
 
@@ -264,6 +264,7 @@
     background-color: #e8a542;
     box-shadow: 0 5px 0 0 #b87333;
     transform: translateY(5px);
+    color:#2d2020;
 
 }
 .scrollbar3 {
