--- a/Artzy - Web/css/style-menu.css
+++ b/Artzy - Web/css/style-menu.css
@@ -21,6 +21,7 @@
 .pfp img{
     width: 120px;
     height: 120px;
+    border-radius: 100%;
 }
 
 .txt{
@@ -81,7 +82,7 @@
     display: flex;
     flex-direction: column;
 }
-#hr2{
+#hr5{
     margin: 22px 0px 22px 6px;
     width: 392px; 
     border: solid 2px #726262  ;
