--- a/artzylari/Artzy - Web/css/style-home.css
+++ b/artzylari/Artzy - Web/css/style-home.css
@@ -88,7 +88,7 @@ body{
 .cr
 {
   position: relative;
-  top: -116.1rem;
+  top: -131.1rem;
   left: -1.6rem;
 }
 .can 
@@ -132,7 +132,7 @@ body{
 .linha1
 {
   position: relative;
-  top: 27rem;
+  top: 15rem;
   left: 2.2rem;
   height: 4rem;
   width: 94.5rem;
@@ -261,16 +261,17 @@ body{
   text-shadow: -6px 6px 0 rgba(202, 146, 87, 0.72);
 }
 
-/* 🐛🐛🐛🐛 CARDS TENDENCIA DA LOJA 🐛🐛🐛🐛 */
+/* 🐛🐛🐛🐛 cartaooS TENDENCIA DA LOJA 🐛🐛🐛🐛 */
 
-.car
+.carrr
 {
-  position: relative;
-  top: 37rem;
+  position: absolute;
+  top: 104rem;
   left: 2.3rem;
   width: 94.5rem;
+  height: 60px;
 }
-.card
+.cartaoo
 {
   margin: 10px 19px;
   overflow: hidden;
@@ -279,38 +280,35 @@ body{
   height: 488px;
   border-radius: 23px;
   background: #ffc369;
-  transition: transform 0.3s ease-in-out;
 
 }
 
-.daimg
+.daimgg
 {
   width: 443px;
   height: 245.3px;
   margin: 10px 5px;
   margin-bottom: 10px;
   border-radius: 13px;
-  float: left;
   margin-bottom: 20px;
   background-color: aquamarine;
   overflow: hidden;
   position: absolute;
   left: 0.3rem;
-  top: 0.3rem;
+  top: 0.1rem;
 }
-.daimg img
+.daimgg img
 {
   left: -0.1rem;
   top: -0.9rem;
   height: auto;
   width: 28.1rem;
-  position: absolute;
 }
 .descri
 {
-  position: absolute;
+  position: relative;
   font-family: SuperBoys;
-  font-size: 28.7px;
+  font-size: 25.5px;
   text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
   font-weight: normal;
   font-stretch: normal;
@@ -319,11 +317,13 @@ body{
   letter-spacing: 1.28px;
   text-align: left;
   color: #fff;
-  left: 1.7rem;
-  top: 17.8rem;
+  left: 1.4rem;
+  top: 17.1rem;
+  display: block;
+  width: 28rem;
 }
 .preço {
-  position: absolute;
+  position: relative;
   display: block;
   font-family: Retropulse;
   font-size: 19px;
@@ -334,21 +334,28 @@ body{
   background-color: rgb(84 56 56);
   border-radius: 11.4px;
   margin-top: 10px;
-  top: 24.4rem;
+  top: 17.4rem;
   left: 22.9rem;
   padding: 0.6rem;
-  transition: transform 0.3s ease-in-out;
+  transition: transform 0.3s ease, box-shadow 0.4s ease;
+  cursor: pointer;
 }
 .preço:hover 
 {
   transform: translateY(-5px); 
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 }
+
+.preço:not(hover) 
+{
+  transform: translateY(0px); 
+  box-shadow: 0 0px 0px rgba(0, 0, 0, 0.5);
+}
 .av
 {
-  position: absolute;
+  position: relative;
   left: 1.1rem;
-  top: 23rem;
+  top: 18rem;
   width: 50px;
   height: 31px;
   margin: 16px 8px 0 14px;
@@ -359,7 +366,7 @@ body{
 
 .avali
 {
-  position: absolute;
+  position: relative;
   font-family: Retropulse;
   font-size: 14px;
   text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
@@ -370,13 +377,13 @@ body{
   letter-spacing: 1.28px;
   text-align: left;
   color: rgb(255 255 255 / 90%);
-  left: 0.8rem;
-  top: 0.5rem;
+  left: -0.3rem;
+  top: -0.3rem;
 }
 .des
 {
-  position: absolute;
-  font-family:BebasNeue;
+  position: relative;
+  font-family: BebasNeue;
   font-size: 12px;
   text-shadow: 0 4px 4px rgb(0 0 0 / 16%);
   font-weight: normal;
@@ -386,16 +393,17 @@ body{
   letter-spacing: 1.28px;
   text-align: left;
   color: rgba(0, 0, 0, 0.7);
-  left: 3.6rem;
-  top: 0.6rem;
-  right: -20rem;
+  left: 2.6rem;
+  bottom: 1.5rem;
+  display: block;
+  width: 15rem;
 }
 
 
 .circulo
 {
-  position: absolute;
-  top: 26rem;
+  position: relative;
+  top: 15.6rem;
   left: 1.5rem;
   display: flex;
   align-items: center;
@@ -410,7 +418,7 @@ body{
 }
 .p
 {
-  position: absolute;
+  position: relative;
   font-family: BebasNeue;
   font-size: 17.1px;
   text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
@@ -422,11 +430,11 @@ body{
   text-align: left;
   color: #5d4347;
   left: 5.1rem;
-  top: 27.7rem;
+  top: 13.2rem;
 }
 .fornome
 {
-  position: absolute;
+  position: relative;
   font-family: Retropulse;
   font-size: 14.7px;
   text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
@@ -436,7 +444,263 @@ body{
   line-height: normal;
   letter-spacing: 1.28px;
   text-align: left;
-  color: rgba(255, 255, 255, 0.77);
-  left: 7.1rem;
-  top: 27.9rem;
+  color: #533200;
+  left: 5.2rem;
+  top: 13.1rem;
 }
+
+#daimg1
+{
+  left: 0.4rem;
+}
+#daimg2
+{
+  left: 0.4rem;
+}
+#daimg3
+{
+  left: 0.4rem;
+}
+
+.cartaoo:hover
+{
+  transition: box-shadow 0.4s ease, transform 0.4s ease;
+  box-shadow: -10px 8px 0 0 #543838;
+  transform: translate(7px, -7px);
+}
+
+.cartaoo:not(:hover)
+{
+  transition: box-shadow 0.4s ease, transform 0.4s ease;
+  box-shadow: 0px 0px 0 0 #ffc369;
+  transform: translate(0px, 0px);
+}
+
+.img1:hover
+{
+  transition: box-shadow 0.4s ease, transform 0.4s ease;
+  box-shadow: -10px 8px 0 0 #543838;
+  transform: translate(7px, -7px);
+}
+
+.img1:not(:hover)
+{
+  transition: box-shadow 0.4s ease, transform 0.4s ease;
+  box-shadow: 0px 0px 0 0 #ffc369;
+  transform: translate(0px, 0px);
+}
+
+.scrollbar::-webkit-scrollbar 
+{
+  width: 19px;
+}
+
+.scrollbar::-webkit-scrollbar-thumb 
+{
+  background-color: #6b4949; 
+  border: 0.28em solid #f5e7e1; 
+  border-radius: 2rem; 
+}
+
+.scrollbar::-webkit-scrollbar-thumb:hover 
+{
+  background-color: rgb(136, 106, 106); 
+}
+
+.scrollbar::-webkit-scrollbar-track
+{
+  border-radius: 3rem;
+}
+
+#carouselll .gtco-testimonials 
+{
+position: relative;
+margin-top: 30px;
+}
+
+#carouselll  .owl-stage-outer 
+{
+  padding: 20px;
+}
+
+
+#carouselll  .card 
+{
+  height: 300px;
+  width: 500px;
+  background: #FFF8EF;
+  overflow: hidden;
+  border-radius: 25px 25px 25px 25px;
+}
+
+#carouselll  .active 
+{
+  opacity: 0.5;
+  transition: all 0.9s;
+  transform: scale(0.9);
+}
+
+#carouselll .center 
+{
+  opacity: 1;
+  transform: scale(1.1);
+  transition: all 0.9;
+}
+.ale
+{
+  position: absolute;
+  top: 141rem;
+  left: 2.3rem;
+  width: 94.5rem;
+  height: 60px;
+}
+.iale
+{
+  width: 367px;
+  height: 266.9px;
+  margin: 10px 5px;
+  margin-bottom: 10px;
+  border-radius: 8px;
+  float: left;
+  margin-bottom: 20px;
+  background-color: aquamarine;
+  overflow: hidden;
+  position: relative;
+}
+.iale img
+{
+  overflow: hidden;
+  position: absolute;
+  left: 0rem;
+  top: 0rem;
+  height: 31rem;
+}
+.iale:hover
+{
+  transition: box-shadow 0.4s ease, transform 0.4s ease;
+  box-shadow: -10px 8px 0 0 #543838;
+  transform: translate(7px, -7px);
+}
+
+.iale:not(:hover)
+{
+  transition: box-shadow 0.4s ease, transform 0.4s ease;
+  box-shadow: 0px 0px 0 0 #ffc369;
+  transform: translate(0px, 0px);
+}
+#m1 img
+{
+  top: -12.7rem;
+  width: 100%;
+}
+#m2 img
+{
+  top: -4.7rem;
+  width: 100%;
+}
+#m3 img
+{
+  top: -12.7rem;
+  width: 100%;
+}
+#m4 img
+{
+  top: -12.7rem;
+  width: 100%;
+}
+#m5 img
+{
+  top: -12.7rem;
+  width:25.1rem;
+}
+#m6 img
+{
+  top: -0.7rem;
+  width: 23rem;
+  height: 37rem;
+}
+#m7 img
+{
+  top: -2.7rem;
+  width: 40rem;
+  height: 30rem;
+  left: -3rem;
+} 
+#m8 img
+{
+  top: -4.5rem;
+  width: 35rem;
+  height: 32rem;
+}
+#m9 img
+{
+  top: -1.7rem;
+  width: 23rem;
+  height: 35rem;
+  left: 0rem;
+}
+#m10 img
+{ 
+  top: -3.7rem;
+  width: 24rem;
+}
+#m11 img
+{ 
+  top: -4.7rem;
+  width: 23rem;
+  height: 33rem;
+}
+#m12 img
+{ 
+  top: -3.7rem;
+  width: 24rem;
+  height: 21rem;
+}
+#m13 img
+{ 
+  top: -0.7rem;
+  width: 32rem;
+  height: 28rem;
+  left: -4rem;
+}
+#m14 img
+{ 
+  top: -0.7rem;
+  width: 24rem;
+}
+#m15 img
+{ 
+  top: -0.7rem;
+  width: 27rem;
+  height: 39rem;
+}
+#m16 img
+{ 
+  top: -3.7rem;
+  width: 24rem;
+}
+#m17 img
+{ 
+  top: -0.7rem;
+  width: 24rem;
+}
+#m18 img
+{ 
+  top: -0.8rem;
+  width: 24rem;
+  height: 24rem;
+}
+#m19 img
+{ 
+  top: -0.7rem;
+  width: 25rem;
+  height: 31rem;
+}
+#m20 img
+{ 
+  top: -3.7rem;
+  width: 32rem;
+  height: 21rem;
+  left: -8.2rem;
+}
+
