--- a/Artzy - Web/css/style-home.css
+++ b/Artzy - Web/css/style-home.css
@@ -1,34 +1,713 @@
+@font-face {
+  font-family: KGRedHands ;
+  src: url(../src//font/kg_red_hands/KGRedHands.ttf);
+}
+@font-face {
+  font-family: Retropulse;
+    src: url(../src/font/retropulse/Retropulse.ttf);
+}
+@font-face {
+  font-family: HeyComic ;
+  src: url(../src//font/hey_comic//Hey\ Comic.ttf);
+}
+@font-face {
+  font-family: Organic Relief;
+  src: url(../src/font/organic_relief/Organic\ Relief.ttf);
+}
+@font-face {
+  font-family: Justmore-PersonalUse;
+  src: url(../src/font/justmore/Justmore\ -\ Personal\ Use.ttf);
+}
+@font-face {
+  font-family: BebasNeue;
+  src: url(../src/font/bebas_neue/BebasNeue-Regular.ttf);
+}  
+@font-face {
+  font-family: SuperBoys;  
+  src: url(../src/font/super_boys/Super\ Boys.ttf);
+}
+@font-face {
+  font-family: UpWitchTheBirds;
+  src: url(../src/font/UpWithTheBirds/Up\ with\ the\ Birds.otf);
+}
+@font-face {
+  font-family: MomCakePro;
+  src: url(../src/font/momcakepro/MomcakePro-Regular.ttf);
+}
+@font-face {
+  font-family: SuperBoys-Regular;
+  src: url(../src/font/super_boys/Super\ Boys.ttf);
+}
+
 body{
     background-color: #ecd9d1 ;
 }
 
+/* 🐛🐛🐛🐛Ele apaga as coisas, faz sumir🐛🐛🐛🐛 */
 .off{
-    display: none;
+    display: none; 
 }
+
+/* 🐛🐛🐛🐛Ele faz aparecer🐛🐛🐛🐛 */
 .on{
     display: block;
 }
 
-.scrollbar2 {
+/* 🐛🐛🐛🐛barra de rolagem🐛🐛🐛🐛 */
+.scrollbar2 
+{
     right: 20px; 
     position: relative;
   
-  }
+}
   
-  .scrollbar2::-webkit-scrollbar {
-    width: 19px;
-  }
+  .scrollbar2::-webkit-scrollbar 
+{
+  width: 19px;
+}
   
-  .scrollbar2::-webkit-scrollbar-thumb {
-    background-color: #6b4949; 
-    border: 0.28em solid #f5e7e1; 
-    border-radius: 2rem; 
-  }
+  .scrollbar2::-webkit-scrollbar-thumb 
+{
+  background-color: #6b4949; 
+  border: 0.28em solid #f5e7e1; 
+  border-radius: 2rem; 
+}
   
-  .scrollbar2::-webkit-scrollbar-thumb:hover {
-    background-color: rgb(136, 106, 106); 
-  }
+  .scrollbar2::-webkit-scrollbar-thumb:hover 
+{
+   background-color: rgb(136, 106, 106); 
+}
   
-  .scrollbar2::-webkit-scrollbar-track{
-    border-radius: 3rem;
-  }
+  .scrollbar2::-webkit-scrollbar-track
+{
+  border-radius: 3rem;
+}
+
+  /* 🐛🐛🐛🐛CANAIS RECENTES🐛🐛🐛🐛 */
+
+.cr
+{
+  position: relative;
+  top: -131.1rem;
+  left: -1.6rem;
+}
+.can 
+{
+  position: absolute;
+  font-family: SuperBoys-Regular;
+  font-size: 40.6px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: 2.12px;
+  color: #543838;
+  left: 5.9rem;
+  right: 0rem;
+  top: 139rem;
+  bottom: 0rem;
+  text-align: justify;
+  text-shadow: -6px 6px 0 rgba(202, 146, 87, 0.72);
+}
+.rec
+{
+  position: absolute;
+  font-family: SuperBoys-Regular;
+  font-size: 40.6px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: 2.12px;
+  color: #543838;
+  left: 6.9rem;
+  right: 0rem;
+  top: 139rem;
+  bottom: 0rem;
+  text-align: justify;
+  text-shadow: -6px 3px 0 rgba(202, 146, 87, 0.72);
+}
+ /* 🐛🐛🐛🐛 IMAGENS DO CANAIS RECENTES 🐛🐛🐛🐛 */
+
+.linha1
+{
+  position: relative;
+  top: 15rem;
+  left: 2.2rem;
+  height: 4rem;
+  width: 94.5rem;
+}
+.img1
+{
+  width: 367px;
+  height: 266.9px;
+  margin: 10px 5px;
+  margin-bottom: 10px;
+  border-radius: 8px;
+  float: left;
+  margin-bottom: 20px;
+  background-color: aquamarine;
+  overflow: hidden;
+  position: relative;
+}
+
+.img1 img{
+  overflow: hidden;
+  position: absolute;
+  left: 0rem;
+  top: -9rem;
+  height: 27rem;
+}
+#i2 img
+{
+  left: 0rem;
+  top: -4rem;
+  height: 31rem;
+}
+#i3 img
+{
+  left: -1.1rem;
+  top: -9rem;
+  height: 30.1rem;
+}
+#i4 img
+{
+  left: -0.1rem;
+  top: -0.4rem;
+  height: 17.8rem;
+  width: 23.4rem;
+}
+#i5 img
+{
+  left: -0.9rem;
+  top: -4.2rem;
+  height: 24rem;
+  width: 24.2rem;
+}
+#i6 img
+{
+  left: -2.3rem;
+  top: -0.2rem;
+  height: 16.9rem;
+  width: 27.5rem;
+}
+#i7 img
+{
+  left: -0.2rem;
+  top: -0.4rem;
+  height: 18.2rem;
+  width: 23.6rem;
+}
+#i8 img
+{
+  left: -0.9rem;
+  top: -0.4rem;
+  height: 17.2rem;
+  width: 24.2rem;
+}
+#i9 img
+{
+  left: -0.9rem;
+  top: -4.2rem;
+  height: 24rem;
+  width: 24.2rem;
+}
+#i10 img
+{
+  left: -0.9rem;
+  top: -1.2rem;
+  height: 19.8rem;
+  width: 25.4rem;
+}
+#i11 img
+{
+  left: -0.9rem;
+  top: -0.6rem;
+  height: 27.1rem;
+  width: 24.6rem;
+}
+#i12 img
+{
+  left: 0.0rem;
+  top: -0.2rem;
+  height: 19.3rem;
+  width: 23.1rem;
+}
+
+ /* 🐛🐛🐛🐛 TENDENCIA DA LOJA 🐛🐛🐛🐛 */
+
+.ic
+{
+  position: absolute;
+  left: 3rem;
+  top: 85rem;
+}
+.tenden
+{
+  position: absolute;
+  font-family: SuperBoys-Regular;
+  font-size: 40.6px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: 2.12px;
+  color: #543838;
+  left: 8.9rem;
+  right: 0rem;
+  top: 86.5rem;
+  bottom: 0rem;
+  text-align: justify;
+  text-shadow: -6px 6px 0 rgba(202, 146, 87, 0.72);
+}
+
+/* 🐛🐛🐛🐛 cartaooS TENDENCIA DA LOJA 🐛🐛🐛🐛 */
+
+.carrr
+{
+  position: absolute;
+  top: 104rem;
+  left: 2.3rem;
+  width: 94.5rem;
+  height: 60px;
+}
+.cartaoo
+{
+  margin: 10px 19px;
+  overflow: hidden;
+  float: left;
+  width: 465px;
+  height: 488px;
+  border-radius: 23px;
+  background: #ffc369;
+
+}
+
+.daimgg
+{
+  width: 443px;
+  height: 245.3px;
+  margin: 10px 5px;
+  margin-bottom: 10px;
+  border-radius: 13px;
+  margin-bottom: 20px;
+  background-color: aquamarine;
+  overflow: hidden;
+  position: absolute;
+  left: 0.3rem;
+  top: 0.1rem;
+}
+.daimgg img
+{
+  left: -0.1rem;
+  top: -0.9rem;
+  height: auto;
+  width: 28.1rem;
+}
+.descri
+{
+  position: relative;
+  font-family: SuperBoys;
+  font-size: 25.5px;
+  text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: 1.28px;
+  text-align: left;
+  color: #fff;
+  left: 1.4rem;
+  top: 17.1rem;
+  display: block;
+  width: 28rem;
+}
+.preço {
+  position: relative;
+  display: block;
+  font-family: Retropulse;
+  font-size: 19px;
+  text-align: center;
+  color: #fff;
+  width: 105px;
+  height: 45px;
+  background-color: rgb(84 56 56);
+  border-radius: 11.4px;
+  margin-top: 10px;
+  top: 17.4rem;
+  left: 22.9rem;
+  padding: 0.6rem;
+  transition: transform 0.3s ease, box-shadow 0.4s ease;
+  cursor: pointer;
+}
+.preço:hover 
+{
+  transform: translateY(-5px); 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+}
+
+.preço:not(hover) 
+{
+  transform: translateY(0px); 
+  box-shadow: 0 0px 0px rgba(0, 0, 0, 0.5);
+}
+.av
+{
+  position: relative;
+  left: 1.1rem;
+  top: 18rem;
+  width: 50px;
+  height: 31px;
+  margin: 16px 8px 0 14px;
+  padding: 8px 17px 7px 18px;
+  border-radius: 17px;
+  background-color: rgb(84 56 56);
+}
+
+.avali
+{
+  position: relative;
+  font-family: Retropulse;
+  font-size: 14px;
+  text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: 1.28px;
+  text-align: left;
+  color: rgb(255 255 255 / 90%);
+  left: -0.3rem;
+  top: -0.3rem;
+}
+.des
+{
+  position: relative;
+  font-family: BebasNeue;
+  font-size: 12px;
+  text-shadow: 0 4px 4px rgb(0 0 0 / 16%);
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: 1.28px;
+  text-align: left;
+  color: rgba(0, 0, 0, 0.7);
+  left: 2.6rem;
+  bottom: 1.5rem;
+  display: block;
+  width: 15rem;
+}
+
+
+.circulo
+{
+  position: relative;
+  top: 15.6rem;
+  left: 1.5rem;
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+}
+.circulo img 
+{
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+.p
+{
+  position: relative;
+  font-family: BebasNeue;
+  font-size: 17.1px;
+  text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: 1.28px;
+  text-align: left;
+  color: #5d4347;
+  left: 5.1rem;
+  top: 13.2rem;
+}
+.fornome
+{
+  position: relative;
+  font-family: Retropulse;
+  font-size: 14.7px;
+  text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: 1.28px;
+  text-align: left;
+  color: #533200;
+  left: 5.2rem;
+  top: 13.1rem;
+}
+
+#daimg1
+{
+  left: 0.4rem;
+}
+#daimg2
+{
+  left: 0.4rem;
+}
+#daimg3
+{
+  left: 0.4rem;
+}
+
+.cartaoo:hover
+{
+  transition: box-shadow 0.4s ease, transform 0.4s ease;
+  box-shadow: -10px 8px 0 0 #543838;
+  transform: translate(7px, -7px);
+}
+
+.cartaoo:not(:hover)
+{
+  transition: box-shadow 0.4s ease, transform 0.4s ease;
+  box-shadow: 0px 0px 0 0 #ffc369;
+  transform: translate(0px, 0px);
+}
+
+.img1:hover
+{
+  transition: box-shadow 0.4s ease, transform 0.4s ease;
+  box-shadow: -10px 8px 0 0 #543838;
+  transform: translate(7px, -7px);
+}
+
+.img1:not(:hover)
+{
+  transition: box-shadow 0.4s ease, transform 0.4s ease;
+  box-shadow: 0px 0px 0 0 #ffc369;
+  transform: translate(0px, 0px);
+}
+
+.scrollbar::-webkit-scrollbar 
+{
+  width: 19px;
+}
+
+.scrollbar::-webkit-scrollbar-thumb 
+{
+  background-color: #6b4949; 
+  border: 0.28em solid #f5e7e1; 
+  border-radius: 2rem; 
+}
+
+.scrollbar::-webkit-scrollbar-thumb:hover 
+{
+  background-color: rgb(136, 106, 106); 
+}
+
+.scrollbar::-webkit-scrollbar-track
+{
+  border-radius: 3rem;
+}
+
+#carouselll .gtco-testimonials 
+{
+position: relative;
+margin-top: 30px;
+}
+
+#carouselll  .owl-stage-outer 
+{
+  padding: 20px;
+}
+
+
+#carouselll  .card 
+{
+  height: 300px;
+  width: 500px;
+  background: #FFF8EF;
+  overflow: hidden;
+  border-radius: 25px 25px 25px 25px;
+}
+
+#carouselll  .active 
+{
+  opacity: 0.5;
+  transition: all 0.9s;
+  transform: scale(0.9);
+}
+
+#carouselll .center 
+{
+  opacity: 1;
+  transform: scale(1.1);
+  transition: all 0.9;
+}
+.ale
+{
+  position: absolute;
+  top: 141rem;
+  left: 2.3rem;
+  width: 94.5rem;
+  height: 60px;
+}
+.iale
+{
+  width: 367px;
+  height: 266.9px;
+  margin: 10px 5px;
+  margin-bottom: 10px;
+  border-radius: 8px;
+  float: left;
+  margin-bottom: 20px;
+  background-color: aquamarine;
+  overflow: hidden;
+  position: relative;
+}
+.iale img
+{
+  overflow: hidden;
+  position: absolute;
+  left: 0rem;
+  top: 0rem;
+  height: 31rem;
+}
+.iale:hover
+{
+  transition: box-shadow 0.4s ease, transform 0.4s ease;
+  box-shadow: -10px 8px 0 0 #543838;
+  transform: translate(7px, -7px);
+}
+
+.iale:not(:hover)
+{
+  transition: box-shadow 0.4s ease, transform 0.4s ease;
+  box-shadow: 0px 0px 0 0 #ffc369;
+  transform: translate(0px, 0px);
+}
+#m1 img
+{
+  top: -12.7rem;
+  width: 100%;
+}
+#m2 img
+{
+  top: -4.7rem;
+  width: 100%;
+}
+#m3 img
+{
+  top: -12.7rem;
+  width: 100%;
+}
+#m4 img
+{
+  top: -12.7rem;
+  width: 100%;
+}
+#m5 img
+{
+  top: -12.7rem;
+  width:25.1rem;
+}
+#m6 img
+{
+  top: -0.7rem;
+  width: 23rem;
+  height: 37rem;
+}
+#m7 img
+{
+  top: -2.7rem;
+  width: 40rem;
+  height: 30rem;
+  left: -3rem;
+} 
+#m8 img
+{
+  top: -4.5rem;
+  width: 35rem;
+  height: 32rem;
+}
+#m9 img
+{
+  top: -1.7rem;
+  width: 23rem;
+  height: 35rem;
+  left: 0rem;
+}
+#m10 img
+{ 
+  top: -3.7rem;
+  width: 24rem;
+}
+#m11 img
+{ 
+  top: -4.7rem;
+  width: 23rem;
+  height: 33rem;
+}
+#m12 img
+{ 
+  top: -3.7rem;
+  width: 24rem;
+  height: 21rem;
+}
+#m13 img
+{ 
+  top: -0.7rem;
+  width: 32rem;
+  height: 28rem;
+  left: -4rem;
+}
+#m14 img
+{ 
+  top: -0.7rem;
+  width: 24rem;
+}
+#m15 img
+{ 
+  top: -0.7rem;
+  width: 27rem;
+  height: 39rem;
+}
+#m16 img
+{ 
+  top: -3.7rem;
+  width: 24rem;
+}
+#m17 img
+{ 
+  top: -0.7rem;
+  width: 24rem;
+}
+#m18 img
+{ 
+  top: -0.8rem;
+  width: 24rem;
+  height: 24rem;
+}
+#m19 img
+{ 
+  top: -0.7rem;
+  width: 25rem;
+  height: 31rem;
+}
+#m20 img
+{ 
+  top: -3.7rem;
+  width: 32rem;
+  height: 21rem;
+  left: -8.2rem;
+}
+
+.owl-nav{
+  display: none;
+}
+.owl-dots{
+  display:none;
+}
+
