--- a/Artzy - Web/css/style-sobre.css
+++ b/Artzy - Web/css/style-sobre.css
@@ -7,7 +7,7 @@
     src: url(../src//font/hey_comic//Hey\ Comic.ttf);
 }
 @font-face {
-    font-family: Organic Relief;
+    font-family: Organic Relief;0
     src: url(../src/font/organic_relief/Organic\ Relief.ttf);
 }
 @font-face {
